tests/reject/newtype_agg_mix.ty
# An aggregate newtype stays distinct from its underlying type: a bare
# [int] is not an Ids, even though Ids = [int]. Must be a type error.
# BOTH compilers reject this: tychoc0 now tracks newtype identity through its
# checker (the underlying type is still erased to base in the emitted C -- zero
# cost -- but identity is enforced at type boundaries), so it distinguishes an
# Ids from a bare [int] exactly as tychoc does.
type Ids = [int]

fn total(xs: Ids) -> int:
    return len(to_under(xs))

fn main():
    raw := [1, 2, 3]
    println(str(total(raw)))
